fix: fixed css export

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,4 @@
+/* https://tailwindcss.com/docs/using-with-preprocessors#build-time-imports */
 @import 'tailwindcss/base';
 
 @import 'tailwindcss/components';
@@ -5,6 +6,7 @@
 
 @import 'tailwindcss/utilities';
 
+/* Next.js default css */
 html,
 body {
   padding: 0;
