--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -1,3 +1,5 @@
-.btn {
-  @apply py-2 px-4 font-semibold rounded-lg shadow-md text-white bg-green-500 hover:bg-green-700;
+@layer components {
+  .btn {
+    @apply py-2 px-4 font-semibold rounded-lg shadow-md text-white bg-green-500 hover:bg-green-700;
+  }
 }
