--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
-@import './styles/components.css';
+@import './components';
+
+html,
+body {
+  /* Tailwind default font setting + Ilisarniq GTG */
+  font-family: 'Ilisarniq GTG', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+    'Noto Color Emoji';
+}
