--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@ body {
   /* Tailwind default font setting + Ilisarniq GTG */
   font-family: 'Ilisarniq GTG', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-    'Noto Color Emoji';
+    'Noto Color Emoji' !important;
 }
