--- a/src/components/button/index.css
+++ b/src/components/button/index.css
@@ -9,7 +9,7 @@
     @apply border-2 px-6 transition-colors transform-gpu pui-border-radius;
 
     &:focus {
-      /* Removes the outline, bad for acessibility but if we add it it might look weird
+      /* Removes the outline, bad for acessibility but if we add it it might look weird,
       we need to think on adding it back after everything is using the new ui */
       outline: 0;
     }
@@ -25,13 +25,12 @@
 
   /* The default variant */
   .pui-btn-default {
-    /* The text color */
-    @apply text-paragraph-0;
+    /* Adds a text color */
+    /* Makes the border expect the placeholder color */
+    /* Makes the background expect the placeholder color */
+    @apply pui-btn text-pui-paragraph-0 border-pui-placeholder-color bg-pui-placeholder-color;
 
-    /* Sets the colors */
-    border-color: var(--pui-placeholder-color, var(--pui-primary));
-    background-color: var(--pui-placeholder-color, var(--pui-primary));
-
+    /* If the button is not a chip button */
     &:not(.pui-chip-btn) {
       /* On hover */
       &:hover {
@@ -41,11 +40,13 @@
       }
     }
 
+    /* If it IS a chip button */
     &.pui-chip-btn {
       /* On hover */
       &:hover {
-        background-color: var(--pui-paragraph-0, #fff);
-        color: var(--pui-placeholder-color, var(--pui-primary));
+        /* The text now uses the placeholder color */
+        /* The bg goes to white */
+        @apply text-pui-placeholder-color bg-pui-paragraph-0;
       }
     }
   }
@@ -53,39 +54,34 @@
   /* The bordered variant */
   .pui-btn-bordered {
     /* Remove the background since this is an outline button */
-    background-color: transparent;
-
-    /* Sets the colors */
-    border-color: var(--pui-placeholder-color, var(--pui-primary));
-    color: var(--pui-placeholder-color, var(--pui-primary));
+    /* The border expects a placeholder color */
+    /* The text expects a placeholder color */
+    @apply pui-btn bg-transparent border-pui-placeholder-color text-pui-placeholder-color;
 
     /* On hover */
     &:hover {
       /* Sets the text color */
-      @apply text-paragraph-0;
-
       /* Display the background */
-      background-color: var(--pui-placeholder-color, var(--pui-primary));
+      @apply text-pui-paragraph-0 bg-pui-placeholder-color;
     }
   }
 
   .pui-btn-small {
     /* Height = 12*2 = 24px = 1.5rem */
-    @apply pui-btn h-6;
+    @apply h-6;
   }
 
   .pui-btn-medium {
     /* Height = 12*3 = 36px = 2.25rem */
-    @apply pui-btn h-9;
+    @apply h-9;
   }
 
   .pui-btn-large {
     /* Height = 12*4 = 48px = 3rem */
-    @apply pui-btn h-12;
+    @apply h-12;
   }
 
   .pui-btn-xlarge {
-    @apply pui-btn;
     /* Height = 12*5 = 60px = 3.75rem */
     height: 3.75rem;
   }
