--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,5 @@
 
 html,
 body {
-  @apply text-paragraph-500;
-  /* Tailwind default font setting + Ilisarniq GTG */
-  font-family: 'Ilisarniq GTG', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-    'Noto Color Emoji' !important;
+  @apply pui-font-family text-pui-paragraph-500;
 }
