--- a/src/components/textInput/index.css
+++ b/src/components/textInput/index.css
@@ -87,7 +87,7 @@
 
     /* The next input element */
     > * {
-      /* Erro = error border */
+      /* Error border */
       @apply border-pui-error;
 
       /* &:focus {
@@ -105,7 +105,7 @@
       height: 22px;
       width: 22px;
 
-      /* If updating the icon, refer to wiki: SVGs, to learn now to generate these */
+      /* If updating the icon, use the optimize page to generate a new string */
       mask-image: url('data:image/svg+xml,%3Csvg%20width%3D%2222%22%20height%3D%2222%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M11%200c6.075%200%2011%204.925%2011%2011s-4.925%2011-11%2011S0%2017.075%200%2011%204.925%200%2011%200zm0%202a9%209%200%20100%2018%209%209%200%20000-18zm0%2012c.513%200%20.936.383.993.883L12%2015a.997.997%200%2001-.883.993L11%2016c-.552%200-1-.444-1-1%200-.513.383-.936.883-.993L11%2014zm0-8c.552%200%201%20.438%201%201.003v4.994a1%201%200%2001-.883.996L11%2013c-.552%200-1-.438-1-1.003V7.003a1%201%200%2001.883-.996L11%206z%22%2F%3E%3C%2Fsvg%3E');
     }
   }
@@ -134,7 +134,7 @@
       height: 16px;
       width: 16px;
 
-      /* If updating the icon, refer to wiki: SVGs, to learn now to generate these */
+      /* If updating the icon, use the optimize page to generate a new string */
       mask-image: url('data:image/svg+xml,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M5.852%2011.601L1.625%208.22.375%209.781l5.773%204.618%209.626-11.766-1.548-1.266z%22%20fill-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E');
     }
   }
