--- a/src/components/textInput/index.css
+++ b/src/components/textInput/index.css
@@ -63,27 +63,10 @@
     @apply block text-sm text-pui-paragraph-900 tracking-wide mb-2;
   }
 
-  /* The base class for all input statuses */
   /* Unfortunately, <input> cannot have ::after, so this(and all input statuses) must be used in a wrapper */
-  .pui-text-input-status {
-    /* Set up positioning by setting it to relative, so other elements can be absolute */
-    @apply block relative;
-
-    &::after {
-      /* Sets the box sizing */
-      /* It should have absolute position */
-      /* Do not allow for mouse interaction */
-      /* Try to align it on center */
-      /* Top 0 + Bottom 0 makes it have full height */
-      /* Adds 1rem right offset */
-      /* Margin auto to help it with center alignment */
-      @apply box-border absolute pointer-events-none pui-flex-center top-0 bottom-0 right-4 m-auto;
-    }
-  }
-
   /* The error status */
   .pui-text-input-error {
-    @apply pui-text-input-status;
+    @apply pui-absolute-icon-right-padded pui-icon-attention;
 
     /* The next input element */
     > * {
@@ -97,22 +80,12 @@
     &::after {
       /* By setting the bg color, the color of the icon itself is set */
       @apply bg-pui-error;
-
-      /* Displays the after pseudoelement */
-      content: '';
-
-      /* The size to correctly mask the icon */
-      height: 22px;
-      width: 22px;
-
-      /* If updating the icon, use the optimize page to generate a new string */
-      mask-image: url('data:image/svg+xml,%3Csvg%20width%3D%2222%22%20height%3D%2222%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M11%200c6.075%200%2011%204.925%2011%2011s-4.925%2011-11%2011S0%2017.075%200%2011%204.925%200%2011%200zm0%202a9%209%200%20100%2018%209%209%200%20000-18zm0%2012c.513%200%20.936.383.993.883L12%2015a.997.997%200%2001-.883.993L11%2016c-.552%200-1-.444-1-1%200-.513.383-.936.883-.993L11%2014zm0-8c.552%200%201%20.438%201%201.003v4.994a1%201%200%2001-.883.996L11%2013c-.552%200-1-.438-1-1.003V7.003a1%201%200%2001.883-.996L11%206z%22%2F%3E%3C%2Fsvg%3E');
     }
   }
 
   /* The success status */
   .pui-text-input-success {
-    @apply pui-text-input-status;
+    @apply pui-absolute-icon-right-padded pui-icon-check;
 
     /* The next input element */
     > * {
@@ -126,37 +99,11 @@
     &::after {
       /* By setting the bg color, the color of the icon itself is set */
       @apply bg-pui-success;
-
-      /* Displays the after pseudoelement */
-      content: '';
-
-      /* The size to correctly mask the icon */
-      height: 16px;
-      width: 16px;
-
-      /* If updating the icon, use the optimize page to generate a new string */
-      mask-image: url('data:image/svg+xml,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M5.852%2011.601L1.625%208.22.375%209.781l5.773%204.618%209.626-11.766-1.548-1.266z%22%20fill-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E');
     }
   }
 
   /* The loading status */
   .pui-text-input-loading {
-    @apply pui-text-input-status;
-
-    &::after {
-      @apply animate-spin border-solid border-2 border-pui-paragraph-300;
-      animation-duration: 0.6s;
-
-      /* Displays the after pseudoelement */
-      content: '';
-
-      height: 1em;
-      width: 1em;
-
-      border-radius: 100%;
-      border-top-color: transparent;
-      border-right-color: transparent;
-      line-height: 1;
-    }
+    @apply pui-absolute-icon-right-padded pui-icon-spinner;
   }
 }
