--- a/src/components/base.css
+++ b/src/components/base.css
@@ -3,3 +3,4 @@
 @import './flex';
 @import './absoluteIcon'; /* Make sure absolute icon is before icons */
 @import './icons'; /* If you have issues with icons make sure it's in the correct order and before anything that uses icons */
+@import './textEllipsis';
