feat: added selected display to dropdown input

--- a/src/components/dropdownInput/index.css
+++ b/src/components/dropdownInput/index.css
@@ -57,7 +57,7 @@
     /* Removes the rounded corner top since it's right up the input */
     /* Puts it in front of the page but inder the input */
     /* Animate it down on display */
-    @apply list-none absolute my-0 mx-auto pui-text-input-border shadow-lg overflow-y-auto overflow-x-hidden py-2 px-0 border-t-0 rounded-t-none z-10 pui-animate-fadeDown w-full;
+    @apply list-none absolute my-0 mx-auto pui-text-input-border shadow-lg overflow-y-auto overflow-x-hidden py-2 px-0 border-t-0 rounded-t-none z-10 pui-animate-fadeDown w-full bg-white;
 
     animation-duration: 200ms;
 
@@ -68,7 +68,7 @@
   .pui-dropdown-input-item {
     /* Allow for colors to transition */
     /* Adds a minor padding */
-    @apply transition-colors px-2 py-4;
+    @apply transition-colors px-2 py-4 pui-text-ellipsis;
 
     /* On hover */
     &:hover {
@@ -77,5 +77,15 @@
       /* Highlights the background */
       @apply text-pui-secondary font-semibold bg-gray-100;
     }
+  }
+
+  .pui-dropdown-input-selected-options {
+    @apply list-none flex items-center flex-wrap mt-2;
+  }
+
+  .pui-dropdown-input-selected-item {
+    @apply pui-chip-default mb-2 mr-2 pui-text-ellipsis;
+
+    max-width: 220px;
   }
 }
