--- a/src/components/chip/index.css
+++ b/src/components/chip/index.css
@@ -5,7 +5,7 @@
     /* Adds the default border style */
     /* Add the chip padding */
     /* !!! If changing this style, make sure to test it with the pui-btn too !!! */
-    @apply rounded-3xl border-2 border-solid px-4 py-1;
+    @apply inline-block rounded-3xl border-2 border-solid px-4 py-1;
     text-align: center;
   }
 
