--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,11 +1,12 @@
 @import './button';
 @import './chip';
 @import './alert';
-@import './textInput';
+@import './dropdownInput';
+@import './selectInput';
 @import './checkboxRadioInput';
+@import './textInput';
 @import './animate';
 @import './skeleton';
 @import './spinner';
 @import './scrollbar';
 @import './link';
-@import './dropdownInput';
