--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,12 +1,12 @@
-@import './button';
-@import './chip';
-@import './alert';
-@import './dropdownInput';
-@import './selectInput';
-@import './checkboxRadioInput';
-@import './textInput';
-@import './animate';
-@import './skeleton';
-@import './spinner';
-@import './scrollbar';
-@import './link';
+@import './Button';
+@import './Chip';
+@import './Alert';
+@import './DropdownInput';
+@import './SelectInput';
+@import './CheckboxRadioInput';
+@import './TextInput';
+@import './Animate';
+@import './Skeleton';
+@import './Spinner';
+@import './Scrollbar';
+@import './Link';
