feat: wip: WYSIWYG editor(missing fix prose and input status styles)

--- a/src/components/TextInput/index.css
+++ b/src/components/TextInput/index.css
@@ -3,7 +3,7 @@
   .pui-text-input-base {
     /* Makes it full width */
     /* Adds the font family */
-    /* Adds the paddong */
+    /* Adds the padding */
     /* The text should use the 900 shading */
     /* Its colors can transition */
     /* Uses a light font weight */
