feat: added status styles for rich text editor

--- a/src/components/TextInput/index.css
+++ b/src/components/TextInput/index.css
@@ -97,7 +97,7 @@
 
     /* The next input element */
     > * {
-      /* Erro = error border */
+      /* Success border */
       @apply border-pui-success;
 
       /* &:focus {
